ml tested and refactored

--- a/src/fasttext.ipynb
+++ b/src/fasttext.ipynb
@@ -73,14 +73,14 @@
     "\n",
     "    # fastText\n",
     "    fasttext_classifier = fasttext.train_supervised(\n",
-    "            input=train_path,\n",
-    "            autotuneValidationFile=val_path,\n",
-    "            autotuneDuration=300,\n",
+    "        input=train_path,\n",
+    "        autotuneValidationFile=val_path,\n",
+    "        autotuneDuration=300,\n",
     "    )\n",
     "\n",
     "    train_predictions = []\n",
     "    for _, row in train_data.iterrows():\n",
-    "        query = str(row[\"prompt\"]).replace(\"\\n\", \"\")\n",
+    "        query = str(row[\"prompt\"])\n",
     "        prediction = fasttext_classifier.predict(query)\n",
     "        train_predictions.append(1 if prediction[0][0] == \"__label__1\" else 0)\n",
     "\n",
@@ -88,25 +88,19 @@
     "\n",
     "    for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
     "        text = str(row[\"prompt\"])\n",
-    "        query = text.replace(\"\\n\", \"\")\n",
     "\n",
     "        start_time = time.perf_counter_ns()\n",
     "        prediction = fasttext_classifier.predict(query)\n",
     "        end_time = time.perf_counter_ns()\n",
     "\n",
     "        prediction_times.append(end_time - start_time)\n",
-    "\n",
-    "        if prediction[0][0] == \"__label__1\":\n",
-    "            predictions.append(1)\n",
-    "        else:\n",
-    "            predictions.append(0)\n",
-    "\n",
+    "        predictions.append(1 if prediction[0][0] == \"__label__1\" else 0)\n",
     "        actuals.append(row[\"label\"])\n",
     "\n",
     "    mean_prediction_time = statistics.mean(prediction_times)\n",
     "\n",
     "    util.evaluate_run(\n",
-    "        predictions,\n",
+    "        predictions=predictions,\n",
     "        true_labels=actuals,\n",
     "        domain=domain,\n",
     "        model_name=\"fastText\",\n",
@@ -116,7 +110,7 @@
     "        training=True,\n",
     "    )\n",
     "\n",
-    "    fasttext_classifier.model.save_model(f\"models/fastText_{domain}_fasttext.bin\")\n"
+    "    fasttext_classifier.save_model(f\"models/fastText_{domain}_fasttext.bin\")\n"
    ]
   },
   {
@@ -153,7 +147,6 @@
     "    \n",
     "    for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
     "        text = str(row[\"prompt\"])\n",
-    "        query = text.replace(\"\\n\", \"\")\n",
     "\n",
     "        try:\n",
     "            start_time = time.perf_counter_ns()\n",
@@ -225,7 +218,7 @@
     "            \"time_taken_healthcare\": 0\n",
     "        }\n",
     "\n",
-    "        batch_prompt = [prompt.replace(\"\\n\", \" \") for prompt in batch]\n",
+    "        batch_prompt = [prompt.replace(\"\\n\", \"\") for prompt in batch]\n",
     "        \n",
     "        # Time law predictions\n",
     "        start_time = time.perf_counter()\n",
