--- a/src/svm.ipynb
+++ b/src/svm.ipynb
@@ -36,7 +36,7 @@
     "eval_datasets = dataloader.get_eval_datasets()\n",
     "batch_data = dataloader.get_batch_data()\n",
     "\n",
-    "batch_sizes = [1, 32, 64, 128, 256]"
+    "batch_sizes = [1, 32]"
    ]
   },
   {
@@ -47,11 +47,11 @@
    "outputs": [],
    "source": [
     "baai_embedding = TextEmbedding(\n",
-    "    model_name=\"BAAI/bge-small-en-v1.5\", providers=[\"CPUExecutionProvider\"]\n",
+    "    model_name=\"BAAI/bge-small-en-v1.5\", providers=[\"CUDAExecutionProvider\"]\n",
     ")\n",
     "mini_embedding = TextEmbedding(\n",
     "    model_name=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
-    "    providers=[\"CPUExecutionProvider\"],\n",
+    "    providers=[\"CUDAExecutionProvider\"],\n",
     ")\n",
     "\n",
     "tfidf_embedding = TfidfVectorizer()"
@@ -110,14 +110,12 @@
     "    predictions = []\n",
     "    prediction_times = []\n",
     "\n",
-    "    # Skip embedding models if we're waiting for healthcare fastText\n",
     "    for model_name, embedding_model in embedding_models.items():\n",
     "        embed_times: float = None\n",
     "\n",
     "        # Add timing for embedding creation\n",
     "        if model_name == \"tf_idf\":\n",
     "            start_time = time.perf_counter_ns()\n",
-    "            # Convert sparse matrices to dense for consistency\n",
     "            train_embeds = embedding_model.transform(train_data[\"prompt\"])\n",
     "            test_embeds = embedding_model.transform(test_data[\"prompt\"])\n",
     "            end_time = time.perf_counter_ns()\n",
@@ -169,23 +167,7 @@
     "    \"mini\": mini_embedding,\n",
     "    \"tf_idf\": tfidf_embedding,\n",
     "    \"baai\": baai_embedding,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41a8bf2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load SVM models\n",
-    "with open(f\"models/SVM_finance_{embedding_model}.pkl\", \"rb\") as f:\n",
-    "    svm_finance = pkl.load(f)\n",
-    "with open(f\"models/SVM_healthcare_{embedding_model}.pkl\", \"rb\") as f:\n",
-    "    svm_healthcare = pkl.load(f)\n",
-    "with open(f\"models/SVM_law_{embedding_model}.pkl\", \"rb\") as f:\n",
-    "    svm_law = pkl.load(f)"
+    "}\n"
    ]
   },
   {
@@ -195,24 +177,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for embed_model_name, embedding_model in embedding_models:\n",
+    "for embed_model_name, embedding_model in embedding_models.items():\n",
+    "    # Load SVM models\n",
+    "    with open(f\"models/SVM_finance_{embed_model_name}.pkl\", \"rb\") as f:\n",
+    "        svm_finance = pkl.load(f)\n",
+    "    with open(f\"models/SVM_healthcare_{embed_model_name}.pkl\", \"rb\") as f:\n",
+    "        svm_healthcare = pkl.load(f)\n",
+    "    with open(f\"models/SVM_law_{embed_model_name}.pkl\", \"rb\") as f:\n",
+    "        svm_law = pkl.load(f)\n",
+    "\n",
     "    for domain, inference_df in eval_datasets.items():\n",
     "        # Get actual labels once\n",
     "        actuals_ml = inference_df[\"label\"].tolist()\n",
     "\n",
     "        # Get embeddings based on model type\n",
-    "        if embedding_model == \"tf_idf\":\n",
+    "        if embed_model_name == \"tf_idf\":\n",
     "            test_embeds = embedding_model.transform(inference_df[\"prompt\"])\n",
     "        else:\n",
     "            start_time = time.perf_counter_ns()\n",
-    "            if embedding_model == \"mini\":\n",
-    "                test_embeds = np.array(\n",
-    "                    list(mini_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                )\n",
+    "            if embed_model_name == \"mini\":\n",
+    "                test_embeds = np.array(list(mini_embedding.embed(inference_df[\"prompt\"])))\n",
     "            else:  # baai\n",
-    "                test_embeds = np.array(\n",
-    "                    list(baai_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                )\n",
+    "                test_embeds = np.array(list(baai_embedding.embed(inference_df[\"prompt\"])))\n",
+    "                \n",
     "            end_time = time.perf_counter_ns()\n",
     "            embed_times = end_time - start_time\n",
     "            mean_embed_time = embed_times / len(inference_df)\n",
@@ -248,7 +235,7 @@
     "            true_labels=actuals_ml,\n",
     "            latency=statistics.mean(prediction_times_svm),\n",
     "            domain=domain,\n",
-    "            embed_model=embedding_model,\n",
+    "            embed_model=embed_model_name,\n",
     "            model_name=\"SVM\",\n",
     "            train_acc=0.0,\n",
     "            cost=0.0,\n",
@@ -271,17 +258,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for embedding_model in [\"mini\", \"baai\", \"tf_idf\"]:    \n",
+    "for embedding_model in [\"mini\", \"baai\", \"tf_idf\"]: \n",
     "    svm_batch_results = []\n",
+    "    with open(f\"models/SVM_finance_{embed_model_name}.pkl\", \"rb\") as f:\n",
+    "        svm_finance = pkl.load(f)\n",
+    "    with open(f\"models/SVM_healthcare_{embed_model_name}.pkl\", \"rb\") as f:\n",
+    "        svm_healthcare = pkl.load(f)\n",
+    "    with open(f\"models/SVM_law_{embed_model_name}.pkl\", \"rb\") as f:\n",
+    "        svm_law = pkl.load(f)\n",
     "\n",
     "    for batch_size in batch_sizes:\n",
-    "        \n",
     "        batches = [\n",
     "            batch_data[i : i + batch_size] for i in range(0, len(batch_data), batch_size)\n",
     "        ]\n",
     "        for batch in batches:\n",
-    "            num_batches += 1\n",
-    "\n",
     "            batch_metrics = {\n",
     "                \"embed_time\": 0,\n",
     "                \"svm_law_time\": 0,\n",
@@ -295,7 +285,7 @@
     "                embeds = tfidf_embedding.transform(batch)\n",
     "            elif embedding_model == \"mini\":\n",
     "                embeds = np.array(list(mini_embedding.embed(batch)))\n",
-    "            else: # baai\n",
+    "            else: \n",
     "                embeds = np.array(list(baai_embedding.embed(batch)))\n",
     "            batch_metrics['embed_time'] += time.perf_counter() - start_time\n",
     "\n",
@@ -330,6 +320,14 @@
     "\n",
     "    pd.DataFrame(svm_batch_results).to_csv(f\"data/results/batch_svm_{embedding_model}.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5ccf4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
