--- a/src/xgboost.ipynb
+++ b/src/xgboost.ipynb
@@ -12,12 +12,12 @@
     "import statistics\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "import numpy as np\n",
     "import pickle as pkl\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from fastembed import TextEmbedding\n",
     "from xgboost import XGBClassifier\n",
     "import cupy as cp\n",
+    "import numpy as np\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -38,7 +38,7 @@
     "eval_datasets = dataloader.get_eval_datasets()\n",
     "batch_data = dataloader.get_batch_data()\n",
     "\n",
-    "batch_sizes = [1, 32, 64, 128, 256]"
+    "batch_sizes = [1, 32]"
    ]
   },
   {
@@ -49,11 +49,11 @@
    "outputs": [],
    "source": [
     "baai_embedding = TextEmbedding(\n",
-    "    model_name=\"BAAI/bge-small-en-v1.5\", providers=[\"CPUExecutionProvider\"]\n",
+    "    model_name=\"BAAI/bge-small-en-v1.5\", providers=[\"CUDAExecutionProvider\"]\n",
     ")\n",
     "mini_embedding = TextEmbedding(\n",
     "    model_name=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
-    "    providers=[\"CPUExecutionProvider\"],\n",
+    "    providers=[\"CUDAExecutionProvider\"],\n",
     ")\n",
     "\n",
     "tfidf_embedding = TfidfVectorizer()"
@@ -116,16 +116,13 @@
     "    for model_name, embedding_model in embedding_models.items():\n",
     "        embed_times: float = None\n",
     "\n",
-    "        # Add timing for embedding creation\n",
     "        if model_name == \"tf_idf\":\n",
     "            start_time = time.perf_counter_ns()\n",
-    "            # Convert sparse matrices to dense for consistency\n",
     "            train_embeds = embedding_model.transform(train_data[\"prompt\"])\n",
     "            test_embeds = embedding_model.transform(test_data[\"prompt\"])\n",
     "            end_time = time.perf_counter_ns()\n",
     "            embed_times = end_time - start_time\n",
     "        else:\n",
-    "            # Time the embedding process for training data\n",
     "            start_time = time.perf_counter_ns()\n",
     "            train_embeds = np.array(list(embedding_model.embed(train_data[\"prompt\"])))\n",
     "            test_embeds = np.array(list(embedding_model.embed(test_data[\"prompt\"])))\n",
@@ -145,7 +142,7 @@
     "            embed_model=model_name,\n",
     "            save_path=f\"models/XGBoost_{domain}_{model_name}.json\",\n",
     "            embedding_time=mean_embed_time,\n",
-    "            training=False,\n",
+    "            training=True,\n",
     "        )\n"
    ]
   },
@@ -155,31 +152,6 @@
    "metadata": {},
    "source": [
     "# Eval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "729c3061",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xgb_law = XGBClassifier(\n",
-    "    tree_method=\"hist\",\n",
-    "    device=\"cuda\",\n",
-    ")\n",
-    "xgb_finance = XGBClassifier(\n",
-    "    tree_method=\"hist\",\n",
-    "    device=\"cuda\",\n",
-    ")\n",
-    "xgb_healthcare = XGBClassifier(\n",
-    "    tree_method=\"hist\",\n",
-    "    device=\"cuda\",\n",
-    ")\n",
-    "\n",
-    "xgb_law.load_model(f\"models/XGBoost_law_{embedding_model}.json\")\n",
-    "xgb_finance.load_model(f\"models/XGBoost_finance_{embedding_model}.json\")\n",
-    "xgb_healthcare.load_model(f\"models/XGBoost_healthcare_{embedding_model}.json\")"
    ]
   },
   {
@@ -207,27 +179,36 @@
    "outputs": [],
    "source": [
     "for embed_model_name, embedding_model in embedding_models:\n",
+    "    xgb_law = XGBClassifier(\n",
+    "    tree_method=\"hist\",\n",
+    "    device=\"cuda\",\n",
+    "    )\n",
+    "    xgb_finance = XGBClassifier(\n",
+    "        tree_method=\"hist\",\n",
+    "        device=\"cuda\",\n",
+    "    )\n",
+    "    xgb_healthcare = XGBClassifier(\n",
+    "        tree_method=\"hist\",\n",
+    "        device=\"cuda\",\n",
+    "    )\n",
+    "\n",
+    "    xgb_law.load_model(f\"models/XGBoost_law_{embed_model_name}.json\")\n",
+    "    xgb_finance.load_model(f\"models/XGBoost_finance_{embed_model_name}.json\")\n",
+    "    xgb_healthcare.load_model(f\"models/XGBoost_healthcare_{embed_model_name}.json\")\n",
+    "\n",
     "    for domain, inference_df in datasets.items():\n",
-    "        # Get actual labels once\n",
     "        actuals_ml = inference_df[\"label\"].tolist()\n",
     "\n",
-    "        # Get embeddings based on model type\n",
-    "        if embedding_model == \"tf_idf\":\n",
-    "            test_embeds = embedding_model.transform(inference_df[\"prompt\"])\n",
+    "        if embed_model_name == \"tf_idf\":\n",
+    "            embeds = embedding_model.transform(inference_df[\"prompt\"])\n",
     "        else:\n",
     "            start_time = time.perf_counter_ns()\n",
-    "            if embedding_model == \"mini\":\n",
-    "                test_embeds = np.array(\n",
-    "                    list(mini_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                )\n",
-    "            else:  # baai\n",
-    "                test_embeds = np.array(\n",
-    "                    list(baai_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                )\n",
+    "            embeds = np.array(list(baai_embedding.embed(inference_df[\"prompt\"])))\n",
     "            end_time = time.perf_counter_ns()\n",
     "            embed_times = end_time - start_time\n",
     "            mean_embed_time = embed_times / len(inference_df)\n",
     "\n",
+    "        embeds = cp.array(embeds)\n",
     "\n",
     "        predictions_xgb = []\n",
     "        prediction_times_xgb = []\n",
@@ -259,7 +240,7 @@
     "            true_labels=actuals_ml,\n",
     "            latency=statistics.mean(prediction_times_xgb),\n",
     "            domain=domain,\n",
-    "            embed_model=embedding_model,\n",
+    "            embed_model=embed_model_name,\n",
     "            model_name=\"XGBoost\",\n",
     "            train_acc=0.0,\n",
     "            cost=0.0,\n",
@@ -308,9 +289,9 @@
     "                embeds = tfidf_embedding.transform(batch)\n",
     "                embeds = embeds.toarray()\n",
     "            elif embedding_model == \"mini\":\n",
-    "                embeds = list(mini_embedding.embed(batch))\n",
+    "                embeds = np.array(list(mini_embedding.embed(batch)))\n",
     "            else: # baai\n",
-    "                embeds = list(baai_embedding.embed(batch))\n",
+    "                embeds = np.array(list(baai_embedding.embed(batch)))\n",
     "            batch_metrics['embed_time'] += time.perf_counter() - start_time\n",
     "\n",
     "            embeds = cp.array(embeds)\n",
@@ -344,7 +325,7 @@
     "                \"embedding\": True\n",
     "            })\n",
     "    \n",
-    "    pd.DataFrame(xgb_batch_results).to_csv(f\"data/results/batch_xgb_{embedding_model}.csv\", index=False)\n"
+    "    pd.DataFrame(xgb_batch_results).to_csv(f\"data/results/batch_xgb_{embedding_model}.csv\", index=False)"
    ]
   }
  ],
